fixed text overflow issue

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1557,7 +1557,8 @@ $topbar-link-padding: $topbar-height / 3;
   }
 
   .cf {
-    h4 {
+    h4,
+    h5 {
       font-size: .8em !important;
     }
   }
